--- a/app/components/pages/about.component.html
+++ b/app/components/pages/about.component.html
@@ -10,10 +10,10 @@
 </div>
 
 <div class="container">
-    <div class="sectiontitle">
         <h1 class="text-primary">Articles of Belief</h1>
+        <hr>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mollis porttitor tincidunt. Nullam eget bibendum tortor. Etiam ac commodo dolor. Vestibulum sem mauris, auctor sed lectus a, viverra venenatis dolor. Nunc non est nulla. Vestibulum metus lectus, accumsan sed maximus ac, rhoncus nec enim. Suspendisse lobortis nec neque ac vulputate. Nullam vel varius odio.</p>
-    </div>
+<br>
     <ol style="max-width:70rem; margin: 0 auto;">
         <li>Everyone has the right to a standard of living adequate for the health and well being of himself and of his family, including water, food, clothing, housing and medical care.
         </li>
@@ -59,11 +59,10 @@
 
 <div class="album">
     <div class="container">
-        <div class="sectiontitle">
             <h1 style="text-primary">Our Curriculum</h1>
             <hr >
             <p>Leonardo DaVinci once said that “the ultimate sophistication is simplicity”.  At the Academy for Creating Enterprise, we agree. Our curriculum is simple, but that is why it is so effective. As part of our  unique Micro Enterprise training, we teach 25 universally applicable business rules called the “Rules of Thumb”,  (highlighted in chart below.) These rules are guiding stars throughout Where There Are no Jobs, a unique six-volume series of curriculum developed by Academy Founder Stephen Gibson. </p>
-    </div>
+<br>
 <div class="table-responsive">    
 <table class="table table-hover" style="max-width:80rem;margin:0 auto;">
 <tbody>
@@ -295,9 +294,10 @@
 
 
 
-    <h1 class="text-primary sectiontitle">
+    <h1 class="text-primary">
         Frequently Asked Questions
     </h1>
+    <hr>
     <h1 class="faquestion">What is The Academy for Creating Enterprise?</h1>
     <div class="panel">The Academy is a non-profit organization based in Utah that seeks to alleviate poverty through micro enterprise education. During a 6-week program, students learn how to become self-reliant by starting their own small businesses. Although not funded or sponsored by The Church of Jesus Christ of Latter-day Saints, many students who attend The Academy are LDS returned missionaries.</div>
     <h1 class="faquestion">How successful are graduates?</h1>
