--- a/app/components/pages/businessresources.component.html
+++ b/app/components/pages/businessresources.component.html
@@ -1,4 +1,64 @@
-<div class="container">
-<h3>Business Resources</h3>
-<p>This is the business resources page</p>
+<div class="album">
+    <div class="container">
+        <h1 class="text-primary">
+          Business Resources
+            </h1>
+            <hr>
+    </div>
 </div>
+
+<div class="album">
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <p>This is a sample text you can put here explaining legalities/taxes
+                </p>
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <p>This is a sample text you can put here explaining finances
+                </p>
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <p>This is a sample text you can put here explaining strategy
+                </p>
+            </div>
+        </div>
+    </div> 
+</div>
+
+
+<div class="red-background">
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <img src="../app/images/placeholder.png" style="height:280px;margin-left:20px;">
+                <p>This is a sample text you can put here explaining legalities/taxes 
+                </p>
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" style="height:280px;">
+                <p>This is a sample text you can put here explaining finances
+                </p>
+            </div>
+        </div>
+    </div> 
+</div>
+
+<div class="container">
+    <hr>
+    <div class="col-xs-6 right">
+        <h1>Book of Lessons</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mollis porttitor tincidunt. Nullam eget bibendum tortor. Etiam ac commodo dolor. Vestibulum sem mauris, auctor sed lectus a, viverra venenatis dolor. Nunc non est nulla. Vestibulum metus lectus, accumsan sed maximus ac, rhoncus nec enim. Suspendisse lobortis nec neque ac vulputate. Nullam vel varius odio.</p>
+        <p class="btn btn-primary btn-lg">Read More</p>
+    </div>
+    <div class="col-xs-6">
+        <h1>25 Rules of Thumb</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris mollis porttitor tincidunt. Nullam eget bibendum tortor. Etiam ac commodo dolor. Vestibulum sem mauris, auctor sed lectus a, viverra venenatis dolor. Nunc non est nulla. Vestibulum metus lectus, accumsan sed maximus ac, rhoncus nec enim. Suspendisse lobortis nec neque ac vulputate. Nullam vel varius odio.</p>
+        <p class="btn btn-primary btn-lg">Read More</p>
+    </div>
+</div>
+<hr>
+<br />
