--- a/app/components/pages/subpages/legalities.component.html
+++ b/app/components/pages/subpages/legalities.component.html
@@ -84,3 +84,33 @@
     </div>
     </div>
 </div>
+
+
+<div class="album">
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <div class="btn-center">
+                    <h4 class="btn btn-primary btn-center"><a href="http://www.doingbusiness.org/data/exploreeconomies/mexico-city/starting-a-business" target="_blank" class="btn-agenda">Obtaining a Business License</a></h4>
+    </div>
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <h1 class="agenda-title">May - Start Small, Think Big</h1>
+                    <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/May2016Agenda.pdf" target="_blank" class="btn-agenda">Agenda</a></h4>
+                    <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/May2016Outline.pdf" target="_blank" class="btn-agenda"y>Outline</a></h4>
+                
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <h1 class="agenda-title">June - Sell What People Are Buying</h1>
+
+                    <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/June2016Agenda.pdf" target="_blank" class="btn-agenda">Agenda</a></h4>
+                    <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/June2016Outline.pdf" target="_blank" class="btn-agenda">Outline</a></h4>
+                
+            </div>
+        </div>
+    </div> 
+</div>
+
