--- a/app/components/pages/subpages/agenda.component.html
+++ b/app/components/pages/subpages/agenda.component.html
@@ -1,5 +1,5 @@
 <div class="album">
-    <div class="container" style="margin:0 auto; text-align:center; max-width:70rem">
+    <div class="container">
         <h1 class="text-primary">
             Monthly Agendas
             </h1>
@@ -10,94 +10,86 @@
         <p>These agendas provide lesson material for each of these business skills.</p>
     </div>
 </div>
+
+<div class="album">
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <h1 class="agenda-title">March - Make it Easy to Buy</h1>
+                    <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/March2016Agenda.pdf" target="_blank" class="btn-agenda">Agenda</a></h4>
+                
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <h1 class="agenda-title">May - Start Small, Think Big</h1>
+                    <h4 class="btn btn-primary btn-agenda-left" ><a href="../app/monthlyagendas/May2016Agenda.pdf" target="_blank" class="btn-agenda">Agenda</a></h4>
+                    <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/May2016Outline.pdf" target="_blank" class="btn-agenda"y>Outline</a></h4>
+                
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <h1 class="agenda-title">June - Sell What People Are Buying</h1>
+
+                    <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/June2016Agenda.pdf" target="_blank" class="btn-agenda">Agenda</a></h4>
+                    <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/June2016Outline.pdf" target="_blank" class="btn-agenda">Outline</a></h4>
+                
+            </div>
+        </div>
+    </div> 
+</div>
+
 <div class="red-background">
+    <div class="container">
+        <div class="row">
+            <div class="card">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <h1 class="agenda-title">July - Know How to Create Customer Relationships</h1>
+                    <h4 class="btn btn-primary btn-agenda-left btn-white"><a href="../app/monthlyagendas/July2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+                    <h4 class="btn btn-primary btn-agenda-left btn-white"><a href="../app/monthlyagendas/July2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+                
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <h1 class="agenda-title">August - Know Why Customers Buy From You</h1>
+                    <h4 class="btn btn-primary btn-agenda-left btn-white"><a href="../app/monthlyagendas/August2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+                    <h4 class="btn btn-primary btn-agenda-left btn-white"><a href="../app/monthlyagendas/August2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+                
+            </div>
+            <div class="card">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <h1 class="agenda-title">September- Value Your Customers</h1>
+
+                    <h4 class="btn  btn-agenda-left btn-white"><a href="../app/monthlyagendas/September2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
+                    <h4 class="btn  btn-agenda-left btn-white"><a href="../app/monthlyagendas/September2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
+                
+            </div>
+        </div>
+    </div> 
+</div>
+
 <div class="container">
-    <h1 class="text-primary month">March - Make it Easy to Buy</h1>
-    <h4 class="docs"><a href="../app/monthlyagendas/March2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
-</div>
-</div>
-<div class="container" style="padding-top:3rem;">
-    <h1 class="text-primary month">May - Start Small, Think Big</h1>
-            <div class="row">
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/May2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
-            </div>
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/May2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
-            </div>
+    <div class="row">
+        <div class="card">
+            <img src="../app/images/placeholder.png" class="photo-spacing">
+            <h1 class="agenda-title">October- Integrity Before Profit</h1>
+                <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/October2016Agenda.pdf" target="_blank" class="btn-agenda">Agenda</a></h4>
+                <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/October2016Outline.pdf" target="_blank" class="btn-agenda">Outline</a></h4>
+            
         </div>
-</div>
-<div class="album" style="padding-bottom:0 !important;">
-    <div class="container">
-        <h1 class="text-primary month">June - Sell What People Are Buying</h1>
-            <div class="row">
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/June2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
-            </div>
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/June2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
-            </div>
+        <div class="card">
+            <img src="../app/images/placeholder.png" class="photo-spacing">
+            <h1 class="agenda-title">November - Purchase in Bulk</h1>
+                <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/November2016Agenda.pdf" target="_blank" class="btn-agenda">Agenda</a></h4>
+                <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/November2016Outline.pdf" target="_blank" class="btn-agenda">Outline</a></h4>
+            
+        </div>
+        <div class="card">
+            <img src="../app/images/placeholder.png" class="photo-spacing">
+            <h1 class="agenda-title ">December - To Be Announced</h1>
+
+                <h4></h4>
+            
         </div>
     </div>
-</div>
-<div class="red-background">
-    <div class="container">
-        <h1 class="text-primary month">July - Know How to Create Customer Relationships</h1>
-            <div class="row">
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/July2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
-            </div>
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/July2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container" style="padding-top:3rem;">
-    <h1 class="text-primary month">August - Know Why Customers Buy From You</h1>
-            <div class="row">
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/August2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
-            </div>
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/August2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
-            </div>
-        </div>
-</div>
-<div class="album" style="padding-bottom:0 !important;">
-    <div class="container">
-        <h1 class="text-primary month">October- Integrity Before Profit</h1>
-            <div class="row">
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/October2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
-            </div>
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/October2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="red-background">
-    <div class="container">
-        <h1 class="text-primary month">September- Value Your Customers</h1>
-            <div class="row">
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/September2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
-            </div>
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/September2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="container" style="padding-top:3rem;">
-    <h1 class="text-primary month">November - Purchase in Bulk</h1>
-            <div class="row">
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/November2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
-            </div>
-            <div class="col-xs-6">
-                <h4 class="docs"><a href="../app/monthlyagendas/November2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
-            </div>
-        </div>
-</div>
+</div> 
