edited agenda page, making the styles the same across pages

--- a/app/components/pages/businessresources.component.html
+++ b/app/components/pages/businessresources.component.html
@@ -11,17 +11,17 @@
     <div class="container">
         <div class="row">
             <div class="card">
-                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
                 <p>This is a sample text you can put here explaining legalities/taxes
                 </p>
             </div>
             <div class="card">
-                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
                 <p>This is a sample text you can put here explaining finances
                 </p>
             </div>
             <div class="card">
-                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
                 <p>This is a sample text you can put here explaining strategy
                 </p>
             </div>
@@ -30,22 +30,20 @@
 </div>
 
 
-<div class="red-background">
     <div class="container">
         <div class="row">
             <div class="card">
-                <img src="../app/images/placeholder.png" style="height:280px;margin-left:20px;">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
                 <p>This is a sample text you can put here explaining legalities/taxes 
                 </p>
             </div>
             <div class="card">
-                <img src="../app/images/placeholder.png" style="height:280px;">
+                <img src="../app/images/placeholder.png" class="photo-spacing">
                 <p>This is a sample text you can put here explaining finances
                 </p>
             </div>
         </div>
     </div> 
-</div>
 
 <div class="container">
     <hr>
