--- a/app/components/pages/subpages/lessons.component.html
+++ b/app/components/pages/subpages/lessons.component.html
@@ -4,8 +4,8 @@
             <div style="float:left;width:40%;">
                 <h1>English</h1>
                 <hr>
-                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
-                <p>Book of Lessons - Vol.1</p>
+                <a href="/englishbookoflessons"> <img src="../app/images/placeholder.png" style="height:280px;width:100%;"></a>
+                <p>Book of Lessons - Vol.5</p>
                 
             </div>
             <div style="float:right;width:40%;">
@@ -13,7 +13,7 @@
             <h1>Español</h1>
             <hr>
                 <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
-                <p></p>
+                <p>Book of Lessons - Vol.5</p>
                 
             </div>
         </div>
