--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,14 @@
     margin-bottom:0;
 }
 
+.navbar-default{
+    background: white;
+}
+
+.logo{
+    height:50px;
+}
+
 .footer {
   bottom: 0;
   width: 100%;
@@ -67,31 +75,59 @@ li a, .dropbtn {
     text-decoration: none;
 }
 
-li.dropdown {
-    display: inline-block;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
+/* To Dropdown navbar dropdown on hover */
+.navbar-nav > li:hover > .dropdown-menu {
     display: block;
-    text-align: left;
+}
+.dropdown-submenu {
+    position: relative;
 }
 
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-left: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
 
-.dropdown:hover .dropdown-content {
+.dropdown-submenu:hover>.dropdown-menu {
     display: block;
-    z-index: 1;
+}
+
+.dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+.dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+.dropdown-submenu.pull-left {
+    float: none;
+}
+
+.dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}
+.dropdown-menu{
+    top:60%;
 }
 
 .home-navbar{
