fixed the navbar link

--- a/app/components/navbar/navbar.component.html
+++ b/app/components/navbar/navbar.component.html
@@ -43,8 +43,8 @@
                         <li class="dropdown-submenu">
                             <a routerLink="/bookoflessons" class="dropdown-toggle" data-toggle="dropdown">Book of Lessons</a>
                             <ul class="dropdown-menu">
-                                <li><a routerLink="/englishbookoflessons">English</a></li>
-                                <li><a routerLink="/spanishbookoflessons">Español</a></li>
+                                <li><a routerLink="/bookoflessonslesson1English">English</a></li>
+                                <li><a routerLink="/bookoflessonslesson1Spanish">Español</a></li>
                             </ul>
                         </li>
                         <li class="dropdown-submenu">
