classified legalities into the three countries. Fixed link and copyright on footer. edited the agenda-title css. took away the bowsersync and loading text.

--- a/app/components/navbar/navbar.component.html
+++ b/app/components/navbar/navbar.component.html
@@ -21,10 +21,10 @@
                 <li>
                     <a routerLink="/mychapter" class="dropdown-toggle" data-toggle="dropdown">My Chapter<b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Register</a></li>
+                        <li><a routerLink="/featurecomingsoon">Register</a></li>
                         <li><a routerLink="/findchapter">Find My Chapter</a></li>
-                        <li><a href="#">Directory</a></li>
-                        <li><a href="#">Forum</a></li>
+                        <li><a outerLink="/featurecomingsoon">Directory</a></li>
+                        <li><a outerLink="/featurecomingsoon">Forum</a></li>
                         
                         
                     </ul>
@@ -34,7 +34,7 @@
                     <ul class="dropdown-menu">
                         <li><a href="../app/pdfs/ChapterPresidencyManual.pdf" target="_blank">Chapter Leader Training</a></li>
                         <li><a routerLink="/monthlyagendas">Monthly Agendas</a></li>
-                        <li><a href="#">Reporting</a></li>                       
+                        <li><a outerLink="/featurecomingsoon">Reporting</a></li>                       
                     </ul>
                 </li>
                 <li>
@@ -57,9 +57,9 @@
                         <li class="dropdown-submenu">
                             <a routerLink="/legalities" class="dropdown-toggle" data-toggle="dropdown">Legalities</a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Mexico</a></li>
-                                <li><a href="#">Peru</a></li>
-                                <li><a href="#">Phillipines</a></li>
+                                <li><a routerLink="/mexicolegalities">Mexico</a></li>
+                                <li><a routerLink="/perulegalities">Peru</a></li>
+                                <li><a routerLink="/philegalities">Phillipines</a></li>
                             </ul>
                         </li>
                         <li class="dropdown-submenu">
