--- a/app/components/pages/subpages/agenda.component.html
+++ b/app/components/pages/subpages/agenda.component.html
@@ -44,13 +44,13 @@
     <div class="container">
         <div class="row">
             <div class="card">
-                <h1 class="agenda-title">July - Know How to Create Customer Relationships</h1>
+                <h1 class="agenda-title">July- Create Customer Relationships</h1>
                 <img src="../app/images/placeholder.png" class="photo-spacing">
                     <h4 class="btn btn-primary btn-agenda-left btn-white"><a href="../app/monthlyagendas/July2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
                     <h4 class="btn btn-primary btn-agenda-left btn-white"><a href="../app/monthlyagendas/July2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
             </div>
             <div class="card">
-                <h1 class="agenda-title">August - Know Why Customers Buy From You</h1>
+                <h1 class="agenda-title">August- Why Customers Buy From You</h1>
                 <img src="../app/images/placeholder.png" class="photo-spacing">
                 <h4 class="btn btn-primary btn-agenda-left btn-white"><a href="../app/monthlyagendas/August2016Agenda.pdf" target="_blank" class="docs">Agenda</a></h4>
                 <h4 class="btn btn-primary btn-agenda-left btn-white"><a href="../app/monthlyagendas/August2016Outline.pdf" target="_blank" class="docs">Outline</a></h4>
