--- a/app/components/footer/footer.component.html
+++ b/app/components/footer/footer.component.html
@@ -1,11 +1,12 @@
 <footer class="footer">
     <div class="container">
       <div class="text-muted">
-          <p class=" col-xs-6 col-md-4"> Home | Term and Conditions | DONATE |</p>
+          <p class=" col-xs-6 col-md-4"> <a routerLink="/home">Home</a> | Term and Conditions | DONATE |</p>
           <p class=" col-xs-6 col-md-5">2520 North University Ave. Suite 100 Provo, UT</p>
           <p class=" col-xs-6 col-md-3">801.735.1860</p>
           <div>
-          <p class="col-xs-12 col-md-8">Copyright Academy for Creating Enterprise 501 &#169;</p>
+          <p class="col-xs-12 col-md-8">Copyright Academy for Creating Enterprise
+501(c)3</p>
           <p class="col-xs-6 col-md-3" style="float:right;">SOCIAL MEDIA ICONS</p>
           </div>
         </div>
