minor html changes

--- a/app/components/navbar/navbar.component.html
+++ b/app/components/navbar/navbar.component.html
@@ -23,8 +23,8 @@
                     <ul class="dropdown-menu">
                         <li><a routerLink="/featurecomingsoon">Register</a></li>
                         <li><a routerLink="/findchapter">Find My Chapter</a></li>
-                        <li><a outerLink="/featurecomingsoon">Directory</a></li>
-                        <li><a outerLink="/featurecomingsoon">Forum</a></li>
+                        <li><a routerLink="/featurecomingsoon">Directory</a></li>
+                        <li><a routerLink="/featurecomingsoon">Forum</a></li>
                         
                         
                     </ul>
