--- a/app/components/pages/subpages/findchapter.component.html
+++ b/app/components/pages/subpages/findchapter.component.html
@@ -12,17 +12,17 @@
         <div class="row">
             <div class="card">
                 <h1>Mexico</h1>
-                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">                
+                <img src="../app/images/mexicoflag.jpg" style="height:280px;width:100%;">                
             </div>
             <div class="card">
                 <h1>Peru</h1>
-               <a href="http://www.easymapmaker.com/map/6fdb8b472366771f399f296b9e7af5e6" target="_blank"> <img src="../app/images/placeholder.png" style="height:280px;width:100%;"></a>
+               <a href="http://www.easymapmaker.com/map/6fdb8b472366771f399f296b9e7af5e6" target="_blank"> <img src="../app/images/peruflag.jpg" style="height:280px;width:100%;"></a>
                 <a href="http://www.easymapmaker.com/map/6fdb8b472366771f399f296b9e7af5e6" target="_blank"><p>View Peru chapter locations to find one near you</p></a>
                 
             </div>
             <div class="card">
                 <h1>Phillipines</h1>
-                <img src="../app/images/placeholder.png" style="height:280px;width:100%;">
+                <img src="../app/images/philippineflag.jpg" style="height:280px;width:100%;">
                 
             </div>
         </div>
