--- a/app/components/pages/subpages/ruleofthumb.component.html
+++ b/app/components/pages/subpages/ruleofthumb.component.html
@@ -4,7 +4,7 @@
             <div style="float:left;width:40%;">
                 <h1>English</h1>
                 <hr>
-                <a routerLink="/ruleofthumblesson1English"> <img src="../app/images/rotenglishcover.jpg" style="height:280px;width:100%;"></a>
+                <a routerLink="/ruleofthumblesson1English"> <img src="../app/images/rotenglishcover.JPG" style="height:280px;width:100%;"></a>
                 <p>25 Rules of Thumb - Vol. 1</p>
                 
             </div>
@@ -12,7 +12,7 @@
                 
             <h1>Español</h1>
             <hr>
-                <a routerLink="/ruleofthumblesson1Spanish"><img src="../app/images/rotspanishcover.jpg" style="height:280px;width:100%;"></a>
+                <a routerLink="/ruleofthumblesson1Spanish"><img src="../app/images/rotspanishcover.JPG" style="height:280px;width:100%;"></a>
                 <p>25 Rules of Thumb - Vol. 1</p>
                 
             </div>
