--- a/app/components/pages/subpages/agenda.component.html
+++ b/app/components/pages/subpages/agenda.component.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="card">
                 <h1 class="agenda-title">March - Make it Easy to Buy</h1>
-                <img src="../app/images/placeholder.png" class="photo-spacing">
+                <img src="../app/images/marchagenda.jpg" class="photo-spacing">
                 
                     <h4 class="btn btn-primary btn-agenda-left"><a href="../app/monthlyagendas/March2016Agenda.pdf" target="_blank" class="btn-agenda">Agenda</a></h4>
                 
